# buildConfig-creator

./: ancestor-build-config.yaml  env.sh  generate_build_config.py  main.py  oc.sh  pyproject.toml
assembleScript/: assemble
buildConfig/: ancestor-build-config.yaml  generate_build_config.py  settings.yaml
