[tool.poetry]
name = "galushkas-pot"
version = "0.1.0"
description = ""
authors = ["Igor Burenkov <isburenkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.1"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
